update for lesson work

--- a/_notebooks/Foundation/2026-01-20-math-exp.ipynb
+++ b/_notebooks/Foundation/2026-01-20-math-exp.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "2bae462b",
    "metadata": {
     "vscode": {
@@ -104,7 +104,7 @@
     "\n",
     "let number = 5; \n",
     "\n",
-    "console.log(number;);// hint: there's a syntax error here"
+    "console.log(number);// hint: there's a syntax error here"
    ]
   },
   {
