--- a/_notebooks/Foundation/2026-1-14-Nested-Conditionals.ipynb
+++ b/_notebooks/Foundation/2026-1-14-Nested-Conditionals.ipynb
@@ -99,11 +99,17 @@
     "for (let number of NUMBERS) {\n",
     "    if (number % 2 === 0) {\n",
     "        console.log(number + \" is even\");\n",
+    "        if (number % 3 ==0) {\n",
+    "            console.log(number + \"is also divisible by 3\")\n",
+    "        }\n",
     "        \n",
     "        // TODO: Add a nested if statement here to check if divisible by 3\n",
     "        \n",
     "    } else {\n",
     "        console.log(number + \" is odd\");\n",
+    "        if (number % 3 == 0) {\n",
+    "            console.log(number + \" is divisible by 3\")\n",
+    "        }\n",
     "        \n",
     "        // TODO: Add a nested if statement here to check if divisible by 3\n",
     "        \n",
@@ -139,7 +145,6 @@
     "%%js\n",
     "\n",
     "// CODE_RUNNER: Now, you're a bouncer at a nightclub. You need to make a for loop with a nested conditional that will check if people are of the correct age, and if they aren't, it should check if they wear sunglasses. If they are underage but they still have sunglasses, they should be let in.\n",
-    "\n",
     "// List of people trying to get into the nightclub\n",
     "const people = [\n",
     "  { name: 'jimmy', age: 15, wearsSunglasses: false },\n",
@@ -153,11 +158,21 @@
     "// Check everyone at the door\n",
     "for (const person of people) {\n",
     "  if (person.age >= 21) {\n",
+    "      if (person.wearsSunglasses) {\n",
+    "          console.log(person.name + \" is free to enter because over 21 and sunglasses\")\n",
+    "      } else {\n",
+    "          console.log(person.name + \" is free to enter\")\n",
+    "      }\n",
     "    // TODO: Add nested conditional to check if person wears sunglasses\n",
     "    // If they do, print: person.name + \" is free to enter because they're over 21 and they have sunglasses\"\n",
     "    // Otherwise, print: person.name + \" is free to enter\"\n",
     "\n",
     "  } else {\n",
+    "      if (person.wearsSunglasses) {\n",
+    "          console.log(person.name + \" is free to enter b/c sunglasses\")\n",
+    "      } else {\n",
+    "          console.log(person.name + \" is not free to enter b/c underage\")\n",
+    "      }\n",
     "    // TODO: Add nested conditional to check if person wears sunglasses\n",
     "    // If they do, print: person.name + \" is free to enter because they have sunglasses\"\n",
     "    // Otherwise, print: person.name + \" is not free to enter because they are underage\"\n",
@@ -189,7 +204,26 @@
    "source": [
     "%%js\n",
     "\n",
-    "// CODE_RUNNER: Make a nested conditional homework"
+    "// CODE_RUNNER: Make a nested conditional homework\n",
+    "for (let i = 1; i <= 50; i++) {\n",
+    "  console.log(i + \" is divisible by 1\");\n",
+    "\n",
+    "  if (i % 2 === 0) {\n",
+    "    console.log(i + \" is divisible by 2\");\n",
+    "  }\n",
+    "  if (i % 5 === 0) {\n",
+    "    console.log(i + \" is divisible by 5\");\n",
+    "  }\n",
+    "  if (i % 10 === 0) {\n",
+    "    console.log(i + \" is divisible by 10\");\n",
+    "  }\n",
+    "  if (i % 25 === 0) {\n",
+    "    console.log(i + \" is divisible by 25\");\n",
+    "  }\n",
+    "  if (i % 50 === 0) {\n",
+    "    console.log(i + \" is divisible by 50\");\n",
+    "  }\n",
+    "}\n"
    ]
   }
  ],
